--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <section class="hero">
     <div class="hero-content">
-      <h1>Man’s gift to the universe.</h1>
+      <h1>Gifted in AI universe.</h1>
       <a href="#" class="hero-button">Contact Us</a>
     </div>
   </section>
