--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Viplav Sinha – Creative Technologist</title>
-  <meta name="description" content="Viplav Sinha's personal site – Creative Technologist merging Mac aesthetics and AI-powered ideas.">
-  <meta name="keywords" content="Viplav Sinha, Creative Technologist, AI, Mac, Portfolio, Projects">
+  <meta name="description" content="Viplav Sinha's personal site – Creative Technologist merging Data Driven and AI-powered ideas.">
+  <meta name="keywords" content="Viplav Sinha, Creative Technologist, AI Portfolio Projects">
   <meta name="author" content="Viplav Sinha">
   <link rel="stylesheet" href="styles.css" />
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
@@ -24,18 +24,18 @@
 
   <section class="hero">
     <h1>Viplav Sinha</h1>
-    <p>Creative Technologist blending Mac aesthetic with AI-powered innovation</p>
+    <p>Creative Technologist blending Data with AI-powered innovation</p>
     <a href="#about" class="btn">Explore</a>
   </section>
 
   <section id="about" class="about">
     <h2>About Me</h2>
-    <p>I’m Viplav, a creative technologist who loves building experiences that combine sleek design with cutting-edge AI. Think Mac elegance meets machine intelligence.</p>
+    <p>I’m Viplav, a creative technologist who loves building experiences that combine sleek design with cutting-edge AI. Think Data & creativity meets machine intelligence.</p>
     <div class="socials">
-      <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
-      <a href="https://github.com/" target="_blank"><i class="fab fa-github"></i></a>
-      <a href="https://linkedin.com/" target="_blank"><i class="fab fa-linkedin"></i></a>
-      <a href="https://instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="https://x.com/viplavsinha/" target="_blank"><i class="fab fa-twitter"></i></a>
+      <a href="https://github.com/Viplavgitai/" target="_blank"><i class="fab fa-github"></i></a>
+      <a href="https://www.linkedin.com/in/viplav-sinha-4a7821173/" target="_blank"><i class="fab fa-linkedin"></i></a>
+      <a href="https://www.instagram.com/viplavj" target="_blank"><i class="fab fa-instagram"></i></a>
     </div>
   </section>
 
@@ -43,8 +43,8 @@
     <h2>My Projects</h2>
     <div class="carousel">
       <div class="carousel-item active">Project 1: AI-Powered Assistant</div>
-      <div class="carousel-item">Project 2: MacOS-style Productivity App</div>
-      <div class="carousel-item">Project 3: Emotion-based Music Recommender</div>
+      <div class="carousel-item active">Project 2: MacOS-style Productivity App</div>
+      <div class="carousel-item active">Project 3: Emotion-based Music Recommender</div>
     </div>
     <div class="carousel-controls">
       <button onclick="prev()">⟨</button>
